dynamix/force-app/main/default/objects/Payment_Line__c/Payment_Line__c.object-meta.xml
<CustomObject>
    <label>Payment Line</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>