dynamix/force-app/main/default/objects/Payment_Line__c/fields/Adjusted_against__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_against__c</fullName>
    <label>Adjusted against</label>
    <length>255</length>
    <type>Text</type>
</CustomField>