dynamix/force-app/main/default/objects/Payment_Line__c/fields/Balance1__c.field-meta.xml
<CustomField>
    <fullName>Balance1__c</fullName>
    <formula>Milestone__r.Booking__r.Payment_Milestones_Total_Amount__c  -  Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>