dynamix/force-app/main/default/objects/Payment_Line__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <referenceTo>Payment_Milestones__c</referenceTo>
    <relationshipLabel>Payment Line</relationshipLabel>
    <relationshipName>Payment_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>