dynamix/force-app/main/default/objects/Payment_Line__c/fields/Payment_Category__c.field-meta.xml
<CustomField>
    <fullName>Payment_Category__c</fullName>
    <label>Payment Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Category</valueSetName>
    </valueSet>
</CustomField>